# nvim-x11

./: CMakeLists.txt  Makefile
autoload/provider/: clipboard.vim
lua/: nvimX11.lua
src/: nvimx11.c  nvimx11.h  x11clip.c
